[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
petgraph = "0.5.1"

[dev-dependencies]
tempfile = "3.3.0"

[[bin]]
name = "project"
path = "src/main.rs"

[lib]
name = "project"  # The library name, usually the same as the package name
path = "src/lib.rs"

[[test]]
name = "test"
path = "tests/test.rs"